--- a/templates/cityListPage.html
+++ b/templates/cityListPage.html
@@ -59,8 +59,8 @@
         </div>
             <img src="{{url_for('static',filename='img/placeholder.svg')}}" class="card-img-top">
             <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                    <span class="fs-4 fs-md-3 build-name fw-medium">{{city.buildingName}}</span> <span class="bg-dark-subtle rera-text rounded-5 p-1 px-2 text-body-secondary mb-2">RERA <img src="{{url_for('static',filename='img/tic.png')}}" alt="" class="check-img"></span>
+                <div class="d-flex justify-content-between mb-2">
+                    <span class="fs-4 fs-md-3 build-name fw-medium">{{city.buildingName}}</span> <span class="bg-dark-subtle rera-text rounded-5 p-1 px-2 text-body-secondary">RERA <img src="{{url_for('static',filename='img/tic.png')}}" alt="" class="check-img"></span>
                 </div>
                     <p class="card-text text-body-secondary build-add mb-0">By {{city.builderName}} {{city.builderAdd}}</p>
                     <p class=" card-text text-end text-body-secondary">{{city.buildArea}} <sub>sq.ft</sub></p>
