--- a/static/css/page.css
+++ b/static/css/page.css
@@ -1,3 +1,6 @@
+:root{
+  --bg-color:rgba(249, 212, 186, 0.474);
+}
 .home{
     background: #827f7f;
     height: 40rem;
@@ -31,7 +34,7 @@ video {
   }
   .new-arrival{
     height: 25rem;
-    background-color: rgb(177, 213, 249);
+    background-color:var(--bg-color)
   }
   .cust-carousel-item{
     width: 30dvi;
@@ -46,10 +49,10 @@ video {
   }
   .trend-proj{
     height: 25rem;
-    background-color: rgb(248, 251, 188);
+    background-color:var(--bg-color)
   }
   .what-matter{
-    background-color: rgb(204, 244, 175);
+    background-color:var(--bg-color)
   }
   .matter-card{
     width: 24rem;
@@ -73,7 +76,7 @@ video {
     transform: translate(3px, 3px);
   }
   .let-find{
-    background-color: rgba(182, 170, 254, 0.968);
+    background-color:var(--bg-color)
   }
   .let-btn {
     font-size: 1rem;
@@ -98,7 +101,7 @@ video {
     width: 80%;
   }
   .browse{
-    background-color: rgb(189, 249, 239);
+    background-color: var(--bg-color)
   }
   .browse-btn{
     background-color: rgb(50, 198, 139);
@@ -112,7 +115,7 @@ video {
     width: 80%;
   }
   .just-like{
-    background-color: rgb(233, 185, 250);
+    background-color: var(--bg-color);
     font-size: 1.3rem;
     max-height: fit-content;
   }
@@ -123,8 +126,8 @@ video {
     color: #000000;
     padding: 10px 20px;
     border: 1px solid #000000;
-    background: #57e6c9;
-    box-shadow: 8px 8px #4bf2f5;
+    background: #e67957;
+    box-shadow: 8px 8px #f59a4b;
     cursor: pointer;
     margin: 35px 0;
   }
@@ -133,16 +136,16 @@ video {
     transform: translate(3px, 3px);
   }
   .need-hand{
-    background-color: rgb(245, 255, 196);
+    background-color: var(--bg-color)
   }
   .redefine{
-    background-color: rgb(176, 241, 255);
+    background-color: var(--bg-color)
   }
   .best-at{
-    background-color: rgb(249, 184, 255);
+    background-color: var(--bg-color)
   }
   .shopper{
-    background-color: rgb(255, 179, 190);
+    background-color: var(--bg-color)
   }
 .digit-box {
   width: 20px;
@@ -166,10 +169,10 @@ video {
   visibility: hidden;
 }
 .choose{
-  background-color: rgb(198, 255, 163);
+  background-color:var(--bg-color)
 }
 .ready{
-  background-color: rgb(191, 198, 249);
+  background-color:var(--bg-color)
 }
 .best-acc{
   width: 21rem;
