--- a/static/css/page.css
+++ b/static/css/page.css
@@ -1,40 +1,47 @@
 :root{
-  --bg-color:rgba(249, 212, 186, 0.474);
+  --bg-color:#fffce2e3;
+}
+body{
+  background-color:var(--bg-color) !important;
+}
+.heading{
+  color: #f8821b !important;
 }
 .home{
     background: #827f7f;
     height: 40rem;
   position: relative;
 }
-video {
-    object-fit: cover;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 1;
-  }
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 2;
-    background: rgba(10, 10, 10, 0.778);
+.home::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.798); /* Adjust opacity for shadow effect */
+  z-index: 2;
+}
+.home video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
   }
   .home-content {
-    width: 100%;
-    margin: 0 auto;
-    font-size: 5dvi;
-    position: relative;
-    top: 35%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 7dvw;
     color: #fff;
     z-index: 3;
   }
   .new-arrival{
     height: 25rem;
-    background-color:var(--bg-color)
   }
   .cust-carousel-item{
     width: 30dvi;
@@ -49,10 +56,6 @@ video {
   }
   .trend-proj{
     height: 25rem;
-    background-color:var(--bg-color)
-  }
-  .what-matter{
-    background-color:var(--bg-color)
   }
   .matter-card{
     width: 24rem;
@@ -74,9 +77,6 @@ video {
   .matter-btn:active {
     box-shadow: none;
     transform: translate(3px, 3px);
-  }
-  .let-find{
-    background-color:var(--bg-color)
   }
   .let-btn {
     font-size: 1rem;
@@ -100,9 +100,6 @@ video {
   .let-btn-wrapper{
     width: 80%;
   }
-  .browse{
-    background-color: var(--bg-color)
-  }
   .browse-btn{
     background-color: rgb(50, 198, 139);
     border: none;
@@ -115,9 +112,7 @@ video {
     width: 80%;
   }
   .just-like{
-    background-color: var(--bg-color);
     font-size: 1.3rem;
-    max-height: fit-content;
   }
   .just-div {
     width: 17rem;
@@ -134,18 +129,6 @@ video {
   .just-div:hover {
     box-shadow: none;
     transform: translate(3px, 3px);
-  }
-  .need-hand{
-    background-color: var(--bg-color)
-  }
-  .redefine{
-    background-color: var(--bg-color)
-  }
-  .best-at{
-    background-color: var(--bg-color)
-  }
-  .shopper{
-    background-color: var(--bg-color)
   }
 .digit-box {
   width: 20px;
@@ -168,19 +151,62 @@ video {
   width: 100%;
   visibility: hidden;
 }
-.choose{
-  background-color:var(--bg-color)
-}
-.ready{
-  background-color:var(--bg-color)
-}
 .best-acc{
   width: 21rem;
 }
 .best-acc-sh{
   box-shadow: -2px 6px rgb(72, 163, 127) !important;
-  
 }
+.icon-img{
+  width: 4rem;
+}
+.ready-list-wrapper{
+  width: 90%;
+  flex-wrap: wrap;
+}
+.img-card{
+  width: 100% !important;
+  height: 25rem;
+  margin: 10px 0px;
+  border-radius: 20px;
+  overflow-y: hidden;
+  transition: all 0.4s;
+}
+.img-card:hover{
+  box-shadow: 5px 5px 15px rgb(255, 186, 74);
+  scale: 1.04;
+}
+.img-card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgb(225, 225, 225) ;
+  background-image: inherit;
+  background-size: cover;
+  background-position: center;
+  filter: brightness(0.4);
+  z-index: 1;
+}
+.card-content{
+  position: absolute;
+  width: 70%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      color: white;
+      text-align: center;
+}
+.about-text{
+  width: 100%;
+}
+.about-img{
+  width:100%;
+}
+
   @media (max-width:500px){
   .cust-carousel-item-wrapper{
     top:25%;
@@ -194,10 +220,10 @@ video {
 }
   @media (min-width:780px){
     .home{
-      height: 57rem;
+      height: 54rem;
     }
     .home-content{
-      top:35%
+      font-size: 4dvw;
     }
     .cust-carousel-item{
       width: 10rem;
@@ -209,7 +235,6 @@ video {
     .cust-carousel-item-inner-wrapper{
       width: 80%;
     }
-
     .matter-card{
       width: 30dvi;
     }
@@ -222,17 +247,22 @@ video {
     .browse-btn-wrapper{
       width: 65%;
     }
-    .choose-list{
-      width: 70%;
+    .choose-text{
+      width: 45%;
     }
-    .ready-list{
-      width: 70%;
+    .img-card{
+      width: 45% !important;
+      margin:15px 10px;
+      height: 22rem;
+    }
+    .about-text{
+      width: 50%;
+    }
+    .about-img{
+      width:50%;
     }
   }
   @media (min-width:1000px){
-    .home-content{
-      top:25%
-    }
     .cust-carousel-item{
       width: 12rem;
       height: 12rem;
@@ -249,7 +279,10 @@ video {
     .browse-btn-wrapper{
       width: 70%;
     }
-
+    .img-card{
+      width: 30% !important;
+      height: 22rem;
+    }
   }
   @media (min-width:1200px){
     .let-btn-wrapper{
