made layout inheritance

--- a/static/css/city.css
+++ b/static/css/city.css
@@ -1,3 +1,12 @@
+:root{
+    --bg-color:#fffce2e3;
+  }
+  body{
+    background-color:var(--bg-color) !important;
+  }
+  .page-wrapper{
+    margin: 5rem 1rem;
+  }
 .city-card{
     width:18rem !important;
 }
