--- a/templates/cityListPage.html
+++ b/templates/cityListPage.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Construction site: locations</title>
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
-  />
-  <link rel="stylesheet" href="{{url_for('static', filename='css/city.css')}}">
-</head>
-<body class="bg-body-secondary">
-    <div class="d-flex m-3 flex-column flex-md-row">
+{%extends "layout.html"%}
+{% block body %}
+    <div class="d-flex flex-column flex-md-row page-wrapper">
     <div class="fs-3 fw-medium me-md-3 bg-white rounded-3 filter-menu pb-4 overflow-auto my-4 my-md-0">
         <div class="border-bottom"><i class="fa-solid fa-filter m-3"></i>Filters</div>
         <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -74,16 +61,4 @@
     </div>
 </div>
 <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    <script src="https://kit.fontawesome.com/c3ec3021ae.js" crossorigin="anonymous"></script>
-    <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"
-  ></script>
-</body>
-</html>
+{%endblock%}
