--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,9 +15,9 @@
       crossorigin="anonymous"
     />
   </head>
-  <body style="margin-top:3.9rem;">
+  <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: #f59a4b !important;">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="background-color: #f59a4b !important;">
       <div class="container-fluid">
         <a class="navbar-brand text-white fs-4 fw-medium" href="/">WYNDO</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
