--- a/static/css/login.css
+++ b/static/css/login.css
@@ -5,9 +5,40 @@ body{
   background-color:var(--bg-color) !important;
 }
 .login-card{
-    width: 50%;
+    border-radius: 20px;
+    box-shadow: 0px 5px 20px rgba(250, 227, 163, 0.7);
+    width: 90%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.nav-tabs .active{
+  background-color: #f59a4b !important;
+}
+.nav-tabs :not(.active){
+background-color: gainsboro;
+}
+.login-btn{
+  background-color:#f59a4b !important;
+}
+@media (min-width:700px){
+  .login-card{
+    width: 60%;
+  }
+}
+@media (min-width:1000px){
+  .login-card{
+    width: 50%;
+  }
+}
+@media (min-width:1200px){
+  .login-card{
+    width: 30%;
+  }
+}
+@media (min-width:1200px){
+  .login-card{
+    width: 30%;
+  }
 }
