--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,49 @@
 {% extends "layout.html"%}
 {%block body%}
 <div class="d-flex justify-content-center align-items-center position-relative" style="height: 93dvh;">
-    <div class=" login-card">
-        <nav class="nav nav-pills flex-column flex-sm-row">
-            <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="#">Login</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="#">SignIn</a>
-          </nav>
+    <div class=" login-card bg-white p-4 p-md-5">
+        <ul class="nav nav-tabs mb-3 justify-content-between" id="tabs-tab" role="tablist">
+            <li class="nav-item w-50" role="presentation">
+              <button class="nav-link active rounded-0 w-100 fs-5 fw-medium text-light" id="tabs-login-tab" data-bs-toggle="tab" data-bs-target="#tabs-login" type="button" role="tab" aria-controls="tabs-home" aria-selected="true">Login</button>
+            </li>
+            <li class="nav-item w-50" role="presentation">
+              <button class="nav-link rounded-0 w-100 fs-5 fw-medium text-light" id="tabs-signin-tab" data-bs-toggle="tab" data-bs-target="#tabs-signin" type="button" role="tab" aria-controls="tabs-profile" aria-selected="false">SignIn</button>
+            </li>
+          </ul>
+          <div class="tab-content" id="tabs-tabContent">
+            <div class="tab-pane fade show active" id="tabs-login" role="tabpanel" aria-labelledby="tabs-login-tab">
+                <div class="text-center mb-4">
+                    Log in to access your saved searches and personalised recomendations.
+                </div>
+                <form class="gap-4 d-flex flex-column">
+                    <div class="">
+                      <label for="exampleInputEmail1" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <div class="">
+                      <label for="exampleInputPassword1" class="form-label">Password</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <button type="submit" class="btn login-btn w-100 fs-5 fw-medium text-light">Login</button>
+                  </form>
+            </div>
+            <div class="tab-pane fade" id="tabs-signin" role="tabpanel" aria-labelledby="tabs-signin-tab">
+                <div class="text-center mb-4">
+                    SignIn in to save your searches and get personalised recomendations.
+                </div>
+                <form class="gap-4 d-flex flex-column">
+                    <div class="">
+                      <label for="exampleInputEmail1" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <div class="">
+                      <label for="exampleInputPassword1" class="form-label">Password</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <button type="submit" class="btn login-btn w-100 fs-5 fw-medium text-light">SignIn</button>
+                  </form>
+            </div>
+          </div>
     </div>
 </div>
 {%endblock%}
