--- a/static/css/page.css
+++ b/static/css/page.css
@@ -157,6 +157,10 @@ body{
 .best-acc-sh{
   box-shadow: -2px 6px rgb(72, 163, 127) !important;
 }
+#calendar{
+  width: 100%;
+  margin: 0 auto;
+}
 .icon-img{
   width: 4rem;
 }
@@ -250,6 +254,9 @@ body{
     .choose-text{
       width: 45%;
     }
+    #calendar{
+      width: 80%;
+    }
     .img-card{
       width: 45% !important;
       margin:15px 10px;
@@ -277,6 +284,9 @@ body{
       width: 13rem;
     }
     .browse-btn-wrapper{
+      width: 70%;
+    }
+    #calendar{
       width: 70%;
     }
     .img-card{
