--- a/templates/index.html
+++ b/templates/index.html
@@ -376,6 +376,7 @@
 
         var calendar = new FullCalendar.Calendar(calendarEl, {
           timeZone: 'UTC',
+          aspectRatio:2,
             initialView: 'timeGridWeek',
             headerToolbar: {
                 left: 'prev,next today',
@@ -386,7 +387,7 @@
             eventClick: function(info) {
                 info.jsEvent.preventDefault();
                 if (info.event.url) {
-                    window.open(info.event.url, '_blank');
+                    window.open(info.event.url);
                 }
             },
         });
