--- a/templates/index.html
+++ b/templates/index.html
@@ -63,14 +63,20 @@
           <div
             class="carousel-item {% if loop.index == 1 %} active {% endif %}"
             id="slide{{ loop.index }}"
-            data-bs-interval="2000"
+            data-bs-interval="3000"
           >
             <div
               class="cust-carousel-item-inner-wrapper d-flex justify-content-between mx-auto"
             >
-              <div class="bg-white cust-carousel-item rounded-5"></div>
-              <div class="bg-white cust-carousel-item rounded-5"></div>
-              <div class="bg-white cust-carousel-item rounded-5"></div>
+              <div class="bg-white cust-carousel-item rounded-5">
+                <img src="{{data.url1}}" class="cust-carousel-item rounded-5" alt="">
+              </div>
+              <div class="bg-white cust-carousel-item rounded-5">
+                <img src="{{data.url2}}" class="cust-carousel-item rounded-5" alt="">
+              </div>
+              <div class="bg-white cust-carousel-item rounded-5">
+                <img src="{{data.url3}}" class="cust-carousel-item rounded-5" alt="">
+              </div>
             </div>
           </div>
           {%endfor%}
@@ -109,14 +115,20 @@
           <div
             class="carousel-item {% if loop.index == 1 %} active {% endif %}"
             id="slide{{ loop.index }}"
-            data-bs-interval="2000"
+            data-bs-interval="4000"
           >
             <div
               class="cust-carousel-item-inner-wrapper d-flex justify-content-between mx-auto"
             >
-              <div class="bg-white cust-carousel-item rounded-5"></div>
-              <div class="bg-white cust-carousel-item rounded-5"></div>
-              <div class="bg-white cust-carousel-item rounded-5"></div>
+            <div class="bg-white cust-carousel-item rounded-5">
+              <img src="{{data.url1}}" class="cust-carousel-item rounded-5" alt="">
+            </div>
+            <div class="bg-white cust-carousel-item rounded-5">
+              <img src="{{data.url2}}" class="cust-carousel-item rounded-5" alt="">
+            </div>
+            <div class="bg-white cust-carousel-item rounded-5">
+              <img src="{{data.url3}}" class="cust-carousel-item rounded-5" alt="">
+            </div>
             </div>
           </div>
           {%endfor%}
@@ -281,14 +293,20 @@
           <div
             class="carousel-item {% if loop.index == 1 %} active {% endif %}"
             id="slide{{ loop.index }}"
-            data-bs-interval="2000"
+            data-bs-interval="3000"
           >
             <div
               class="cust-carousel-item-inner-wrapper d-flex justify-content-between mx-auto"
             >
-              <div class="bg-white cust-carousel-item rounded-5"></div>
-              <div class="bg-white cust-carousel-item rounded-5"></div>
-              <div class="bg-white cust-carousel-item rounded-5"></div>
+            <div class="bg-white cust-carousel-item rounded-5">
+              <img src="{{data.url1}}" class="cust-carousel-item rounded-5" alt="">
+            </div>
+            <div class="bg-white cust-carousel-item rounded-5">
+              <img src="{{data.url2}}" class="cust-carousel-item rounded-5" alt="">
+            </div>
+            <div class="bg-white cust-carousel-item rounded-5">
+              <img src="{{data.url3}}" class="cust-carousel-item rounded-5" alt="">
+            </div>
             </div>
           </div>
           {%endfor%}
@@ -369,32 +387,9 @@
     <div class="fs-4">
       <strong>Schedule a Free Consultation</strong>: Book a 15-minute call and get <strong>personalized guidence.</strong>
     </div>
-    <div id="calendar"></div>
-    <script>
-          document.addEventListener('DOMContentLoaded', function () {
-        var calendarEl = document.getElementById('calendar');
-
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-          timeZone: 'UTC',
-          aspectRatio:2,
-            initialView: 'timeGridWeek',
-            headerToolbar: {
-                left: 'prev,next today',
-                center: 'title',
-                right: 'dayGridMonth,timeGridWeek,timeGridDay'
-            },
-            events: JSON.parse('{{ events | tojson}}'),
-            eventClick: function(info) {
-                info.jsEvent.preventDefault();
-                if (info.event.url) {
-                    window.open(info.event.url);
-                }
-            },
-        });
-
-        calendar.render();
-      });
-    </script> 
+    {% block calander%}
+    {% include "calendar.html" %}
+    {% endblock calander %}
        </div>
        <!-- why choose section -->
           <div class="fs-2 text-center pt-2 mb-4 heading">why choose <strong>wyndo</strong>? what sets <strong>us</strong> apart?</div>
