--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,8 @@
       crossorigin="anonymous"
     />
    <script src='https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@6.1.15/index.global.min.js'></script>
+   <script src="https://unpkg.com/popper.js@1"></script>
+   <script src="https://unpkg.com/tippy.js@5"></script>
   </head>
   <body>
     <!-- navbar -->
