--- a/templates/index.html
+++ b/templates/index.html
@@ -161,7 +161,7 @@
         class="d-flex justify-content-around align-items-center flex-wrap text-wrap"
       >
         {%for mdata in matterData%}
-        <div class="matter-card">
+        <div class="matter-card" data-aos="flip-up" data-aos-delay="{{loop.index}}00">
           <a href="filter/{{mdata.filter}}" class="text-decoration-none"><button class="matter-btn d-block mx-auto align-content-center">
             {{mdata.heading}}
           </button></a>
@@ -180,7 +180,7 @@
         class="my-4 let-btn-wrapper d-flex justify-content-around align-items-center align-content-center mx-auto flex-wrap"
       >
         {%for letData in letFindData%}
-        <a href="filter/{{letData.filter}}"><button class="let-btn mx-2">{{letData.text}}</button></a>
+        <a href="filter/{{letData.filter}}"><button class="let-btn mx-2" data-aos="fade-up-right" data-aos-delay="{{loop.index}}00">{{letData.text}}</button></a>
         {%endfor%}
       </div>
       <div class="fs-3 pt-2 mb-4">
@@ -199,7 +199,7 @@
         class="browse-btn-wrapper my-5 d-flex justify-content-around align-items-center align-content-center mx-auto flex-wrap"
       >
         {%for text in browseBtnData%}
-        <button class="browse-btn mx-2 my-4 shadow">{{text}}</button>
+        <button class="browse-btn mx-2 my-4 shadow" data-aos="fade-right" data-aos-delay="{{loop.index}}00">{{text}}</button>
         {%endfor%}
       </div>
     </div>
@@ -217,24 +217,24 @@
         <strong>moving vans.</strong>
       </div>
       <div class="d-flex justify-content-evenly my-4 fs-6 flex-wrap mx-4 mx-md-0">
-        <div class="img-card position-relative" style="background-image: url(https://plus.unsplash.com/premium_photo-1661619603945-4abeed3cba99?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
+        <div class="img-card position-relative" data-aos="zoom-in" style="background-image: url(https://plus.unsplash.com/premium_photo-1661619603945-4abeed3cba99?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
         <div class="card-content">
             <div class="fs-3 fw-medium text-white">Loan Assistance</div>The best loans, handpicked for you.
           </div>
         </div>
-        <div class="img-card position-relative" style="background-image: url(https://plus.unsplash.com/premium_photo-1661409078904-42334551db0c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y291cmllcnxlbnwwfHwwfHx8MA%3D%3D);">
+        <div class="img-card position-relative" data-aos="zoom-in" data-aos-delay="400" style="background-image: url(https://plus.unsplash.com/premium_photo-1661409078904-42334551db0c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y291cmllcnxlbnwwfHwwfHx8MA%3D%3D);">
         <div class="card-content">
             <div class="fs-3 fw-medium text-white">Packers & Movers</div> Fast, easy moving with our trusted
           </div>
           network.
         </div>
-        <div class="img-card position-relative" style="background-image: url(https://plus.unsplash.com/premium_photo-1664299434025-3f288072a615?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjV8fGV2JTIwY2FycyUyMGNoYXJnaW5nJTIwc3RhdGlvbnxlbnwwfHwwfHx8MA%3D%3D);">
+        <div class="img-card position-relative" data-aos="zoom-in" data-aos-delay="800" style="background-image: url(https://plus.unsplash.com/premium_photo-1664299434025-3f288072a615?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjV8fGV2JTIwY2FycyUyMGNoYXJnaW5nJTIwc3RhdGlvbnxlbnwwfHwwfHx8MA%3D%3D);">
         <div class="card-content">
             <div class="fs-3 fw-medium text-white">Charging Ahead</div> We'll also set up your EV Station!
           </div>
         </div>
     </div>
-      <div class="my-4">But <strong>Wait,</strong> there's more!</div>
+      <div class="my-4 fs-1 heading">But <strong>Wait,</strong> there's more!</div>
       <div class="my-4">
         Our <strong>Concierge</strong> Service: <strong>Your</strong> home,
         <strong>Our</strong> care.
@@ -246,17 +246,17 @@
         <strong>tailored</strong> to your <strong>needs</strong>.
       </div>
       <div class="d-flex justify-content-evenly my-4 fs-6 flex-wrap mx-4 mx-md-0">
-          <div class="img-card position-relative" style="background-image: url(https://plus.unsplash.com/premium_photo-1679923913530-16c91821a213?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
+          <div class="img-card position-relative" data-aos="zoom-in" style="background-image: url(https://plus.unsplash.com/premium_photo-1679923913530-16c91821a213?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
             <div class="card-content">
               <div class="fs-3 fw-medium text-white">Property Tax?</div> We'll take care of the process!
             </div>
           </div>
-          <div class="img-card position-relative" style="background-image: url(https://plus.unsplash.com/premium_photo-1678374801323-dc49ddf3ae80?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
+          <div class="img-card position-relative" data-aos="zoom-in" data-aos-delay="400" style="background-image: url(https://plus.unsplash.com/premium_photo-1678374801323-dc49ddf3ae80?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
             <div class="card-content">
               <div class="fs-3 fw-medium text-white">Electricity & Water Bills?</div> We'll facilitate everything!
             </div>
           </div>
-          <div class="img-card position-relative" style="background-image: url(https://plus.unsplash.com/premium_photo-1661342406124-740ae7a0dd0e?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
+          <div class="img-card position-relative" data-aos="zoom-in" data-aos-delay="800" style="background-image: url(https://plus.unsplash.com/premium_photo-1661342406124-740ae7a0dd0e?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
             <div class="card-content">
               <div class="fs-3 fw-medium text-white">Maintenance Fees?</div> We'll make it a breeze!
             </div>
@@ -266,13 +266,13 @@
       <div
         class="d-flex gap-4 justify-content-around align-items-center flex-wrap text-wrap py-4"
       >
-          <div class="just-div mx-auto align-content-center">
+          <div class="just-div mx-auto align-content-center" data-aos="flip-left" data-aos-delay="100">
             From <strong>drab</strong> to <strong>fab:</strong> we help you <strong>design your home interiors</strong>with <strong>heart.</strong>
           </div>
-        <div class="just-div mx-auto align-content-center">
+        <div class="just-div mx-auto align-content-center" data-aos="flip-left" data-aos-delay="200">
           <strong>Safety First:</strong> We secure your <strong>property</strong> with <strong>CCTV, alarms</strong> and <strong>motion sensors-</strong>our team's on it!
         </div>
-        <div class="just-div mx-auto align-content-center">
+        <div class="just-div mx-auto align-content-center" data-aos="flip-left" data-aos-delay="300">
           <strong>Welcome to the Future: wyndo</strong> takes care of <strong>all your</strong> home <strong>automation</strong> for you!
         </div>
       </div>
@@ -341,7 +341,7 @@
         class="mt-4 pb-5 let-btn-wrapper d-flex justify-content-around align-items-center align-content-center mx-auto flex-wrap"
       >
         {%for text in redefineData%}
-        <button class="let-btn mx-2">{{text}}</button>
+        <button class="let-btn mx-2" data-aos="fade-right" data-aos-easing="ease-in-sine" data-aos-delay="{{loop.index}}00">{{text}}</button>
         {%endfor%}
       </div>
      </div>
@@ -369,7 +369,7 @@
       </div>
       <!-- shoppers section -->
        <div class="text-center px-md-4">
-        <div class="fs-3 pt-2 pb-4">No. of <strong>wyndo</strong>- shoppers who've discovered their <strong>dream home</strong>, here:
+        <div class="fs-3 pt-2 pb-4 heading">No. of <strong>wyndo</strong>- shoppers who've discovered their <strong>dream home</strong>, here:
           <span class="d-flex justify-content-center">
             <span class="digit-box border border-2 border-black" id="box1">
               <span class="digit" id="digit1">0</span>
@@ -416,12 +416,12 @@
           <h2 class="heading">Ready to join us on thid journey?</h2>
           <div class="fs-4 mb-3">Discover how Wyndo can assist you in finding the perfect property or invest. Get in touch with us today!</div>
           <div class=" d-flex flex-column flex-md-row align-items-center justify-content-evenly mx-auto ready-list-wrapper flex-column flex-md-row">
-            <div class="img-card position-relative" style=" background-image: url(https://images.unsplash.com/photo-1732494644033-fedc311f0442?q=80&w=1031&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); ">
+            <div class="img-card position-relative" data-aos="zoom-in" style=" background-image: url(https://images.unsplash.com/photo-1732494644033-fedc311f0442?q=80&w=1031&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); ">
               <div class="card-content">
                 <div class="text-center text-white"><div class="fw-bold fs-3">Our Vision</div> To be your one-stop destination for personalised real estate solution and provide an unmatched homebuying esperience.</div>
               </div>
             </div>
-            <div class="img-card position-relative"  style="background-image: url('https://images.unsplash.com/photo-1719937206094-8de79c912f40?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+            <div class="img-card position-relative" data-aos="zoom-in" data-aos-delay="400" style="background-image: url('https://images.unsplash.com/photo-1719937206094-8de79c912f40?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
               <div class="card-content">
                 <div class="text-center text-white"><div class="fw-bold fs-3">Our Mission</div> Our mission is to make homeownership accessible, rewarding and a delight experience. By blending innovative technology with personalised service, we aim to transform how people buy and sell homes in major indian cities-one click at a time.</div>
               </div>
@@ -431,17 +431,17 @@
           <h2 class="mt-5 mb-4 heading">Our core values</h2>
           <div class="d-flex align-items-center justify-content-evenly flex-column flex-md-row">
             <div class=" d-flex flex-column flex-md-row align-items-center justify-content-evenly mx-auto ready-list-wrapper">
-              <div class="img-card position-relative" style="background-image: url(https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
+              <div class="img-card position-relative" data-aos="zoom-in" style="background-image: url(https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
                 <div class="card-content">
                   <div class="text-center text-white"><div class="fw-bold fs-3">Integraty</div> We're all about straight talk and honest dealings. No hidden agendas or shady or practices.</div>
                 </div>
               </div>
-              <div class="img-card position-relative" style="background-image: url(https://images.unsplash.com/photo-1500134697073-dc9b3b4409c5?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
+              <div class="img-card position-relative" data-aos="zoom-in" data-aos-delay="400" style="background-image: url(https://images.unsplash.com/photo-1500134697073-dc9b3b4409c5?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
                 <div class="card-content">
                   <div class="text-center text-white"><div class="fw-bold fs-3">Innovation</div> We're the pioneers in the real estate industry, always dreaming up new and exciting ways to help you in your homebuying journey.</div>
                 </div>
               </div>
-              <div class="img-card position-relative" style="background-image: url(https://plus.unsplash.com/premium_photo-1658527046019-5204f2877ac1?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
+              <div class="img-card position-relative" data-aos="zoom-in" data-aos-delay="800" style="background-image: url(https://plus.unsplash.com/premium_photo-1658527046019-5204f2877ac1?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
                 <div class="card-content">
                   <div class="text-center text-white"><div class="fw-bold fs-3">Coustomer Centricity</div>Our clients are at the heart of everything we do. We're dedicated to providing exceptional customer service and exceeding expectations.</div>
                 </div>
@@ -466,4 +466,8 @@
             </div>
           </div>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/aos.js') }}"></script>
+    <script>
+      AOS.init();
+    </script>
 {%endblock%}
