--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,9 +14,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-   <script src='https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@6.1.15/index.global.min.js'></script>
-   <script src="https://unpkg.com/popper.js@1"></script>
-   <script src="https://unpkg.com/tippy.js@5"></script>
+    <link href="{{url_for('static',filename='css/aos.css')}}" rel="stylesheet">
   </head>
   <body>
     <!-- navbar -->
@@ -37,13 +35,16 @@
             <li class="nav-item">
               <a class="nav-link fw-bold fs-5  text-white" href="/login">Contact</a>
             </li>
-        </div>
+          </div>
       </div>
     </nav>
 
     {%block body%}
     {%endblock%}
     
+    <script src="{{ url_for('static', filename='js/index.global.min.js') }}"></script>
+    <script src="https://unpkg.com/popper.js@1"></script>
+    <script src="https://unpkg.com/tippy.js@5"></script>
     <script src="https://kit.fontawesome.com/c3ec3021ae.js" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
