--- a/templates/index.html
+++ b/templates/index.html
@@ -370,17 +370,11 @@
       <!-- shoppers section -->
        <div class="text-center px-md-4">
         <div class="fs-3 pt-2 pb-4 heading">No. of <strong>wyndo</strong>- shoppers who've discovered their <strong>dream home</strong>, here:
-          <span class="d-flex justify-content-center">
-            <span class="digit-box border border-2 border-black" id="box1">
-              <span class="digit" id="digit1">0</span>
-          </span>
-          <div class="digit-box border border-2 border-start-0 border-end-0 border-black" id="box2">
-              <div class="digit" id="digit2">0</div>
-          </div>
-          <div class="digit-box border border-2 border-black" id="box3">
-              <div class="digit" id="digit3">0</div>
-          </div>
-      </span>
+          <span class="border border-2 border-black text-black pb-2">
+          <span class="odometer first">0</span>
+          <span class="odometer border middle border-2 border-top-0 border-bottom-0 border-black">0</span>
+          <span class="odometer last">0</span>
+        </span>
       <div class="viewport-observer" id="viewportTrigger"></div>
     </div>
     <div class="fs-4 mb-2">Buying a <strong>home</strong> is like having a <strong>Conversation</strong> with an old <strong>friend.</strong></div>
