--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,10 +9,6 @@
       href="{{url_for('static',filename='css/'+cssFileName)}}"
     />
     <link
-      rel="stylesheet"
-      href="{{url_for('static',filename='css/odometer.min.css')}}"
-    />
-    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -20,7 +16,7 @@
     />
     <link href="{{url_for('static',filename='css/aos.css')}}" rel="stylesheet">
   </head>
-  <body>
+  <body class="bg-light">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="background-color: #f59a4b !important;">
       <div class="container-fluid">
@@ -46,7 +42,6 @@
     {%block body%}
     {%endblock%}
     
-    <script src="{{ url_for('static', filename='js/odometer.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/index.global.min.js') }}"></script><!-- full calander-->
     <script src="https://unpkg.com/popper.js@1"></script>
     <script src="https://unpkg.com/tippy.js@5"></script>
